# gospel-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keep-alive.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_hnsw_index.py
app/: config.py  main.py
app/api/: routes_compare.py  routes_conversations.py  routes_passage.py  routes_query.py  routes_verses.py
app/auth/: session.py
app/db/: database.py  models.py  seed.py
app/rag/: embeddings.py  generation.py  retrieval.py
data/: bible_loader.py  gospels_loader.py
tests/: conftest.py
tests/integration/: test_conversations.py
web/: .env.example  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
web/e2e/: happy-path.spec.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/new/: page.tsx
web/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  StreamingIndicator.tsx  ThinkingBubble.tsx
web/src/components/citations/: CitationLinkifier.tsx  CitationMarker.tsx  CitationSidePanel.tsx
web/src/components/compare/: ComparePanel.tsx
web/src/components/passage/: PassagePanel.tsx
web/src/components/sidebar/: ConversationItem.tsx  ConversationList.tsx  NewChatButton.tsx  Sidebar.tsx
web/src/hooks/: useChatWithCitations.ts  useConversation.ts  useConversations.ts  useFetchVerse.ts  useTitlePoller.ts
web/src/lib/: api.ts  citations.ts  format.ts  slash-commands.ts
web/src/types/: api.ts  chat.ts
(+8 files in other folders)
